--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,28 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
+anyio==4.10.0
 attrs==25.3.0
 certifi==2025.8.3
+charset-normalizer==3.4.3
 frozenlist==1.7.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 magic-filter==1.0.12
 multidict==6.6.4
+playwright==1.55.0
 propcache==0.3.2
 pydantic==2.11.9
 pydantic_core==2.33.2
+pyee==13.0.0
 python-dotenv==1.1.1
+requests==2.32.5
+sniffio==1.3.1
+TikTokApi==7.1.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+urllib3==2.5.0
 yarl==1.20.1
