--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ python-dotenv==1.1.1
 requests==2.32.5
 sniffio==1.3.1
 TikTokApi==7.1.0
+tiktokapipy==0.2.4.post2
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
